test/errors/expr_fstring_star.py
name = "dep"
print(fr"^{*ame}\(\) is deprecated")
