test/errors/expr_fstring_star.py.expected
test/errors/expr_fstring_star.py:2 error: starred expression not allowed here
